# MRAG

./: .gitignore  M-RAG Project Reconstruction Prompt.md  README.md  Readme.md  docker-compose.yml  mrag_project_dump.txt  pyproject.toml  setup.txt
api/: main.py  rag_router.py
cli/: main.py
core/: __init__.py  config.py  databases.py  elements.py  llm_src.py  mrag_project_dump.txt  settings.py  state.py
core/chunkers/: __init__.py  base.py  hierarchical.py  recursive.py  semantic.py
core/embedders/: __init__.py  base.py  image.py  multimodal.py  text.py
core/loaders/: __init__.py  base.py  image.py  pdf.py  text.py
core/processors/: image_describer.py
core/storers/: base.py  qdrant.py
core/utils/: logging.py
experiments/: dump_project.py  sb.py
frontend/: app.py
ingestion/: graph.py  nodes.py
rag/: config.py  graph.py  nodes.py  notepad.py  reranker.py  retriever.py  state.py  strategies.py
utils/: logger.py  utils.py
